force-app/main/default/objects/Apttus_Billing__CreditMemo__c/Apttus_Billing__CreditMemo__c.object-meta.xml
<CustomObject>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>CM-{00000000}</displayFormat>
        <label>Credit Memo Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>