force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__AppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AppliedAmount__c</fullName>
    <description>The amount reconciled against an invoice or other transactions.</description>
    <inlineHelpText>Amount reconciled against an invoice or other transactions.</inlineHelpText>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>