force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingCountry__c</fullName>
    <description>Country mentioned in the Billing Address.</description>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>