force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingPostalCode__c</fullName>
    <description>Zip or Postal Code in the Billing Address.</description>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>