force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__BillingState__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__BillingState__c</fullName>
    <description>State mentioned in the Billing Address.</description>
    <label>Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>