force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__CreditMemoAttachmentTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoAttachmentTemplate__c</fullName>
    <description>The optional Name of the Template to use when creating an attachment file for the Credit Memo.</description>
    <inlineHelpText>The optional Name of the Template to use when creating an attachment file for the Credit Memo.</inlineHelpText>
    <label>Credit Memo Attachment Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>