force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__CreditMemoEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoEmailTemplate__c</fullName>
    <description>The optional Name of the Email Template to use when creating the Email used to deliver the Credit Memo attachment file.</description>
    <inlineHelpText>The optional Name of the Email Template to use when creating the Email used to deliver the Credit Memo attachment file.</inlineHelpText>
    <label>Credit Memo Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>