force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__CreditMemoNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CreditMemoNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Custom Credit Memo number. Will only be set if Credit Memo custom numbering is configured.</description>
    <inlineHelpText>Custom Medit Memo number.</inlineHelpText>
    <label>Credit Memo Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>