force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__DeliveryStatus__c</fullName>
    <description>Status to track the Credit Memo Delivery.</description>
    <inlineHelpText>Status to track the Credit Memo Delivery.</inlineHelpText>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>