force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Description__c</fullName>
    <description>Description or notes for additional information on the Credit Memo.</description>
    <inlineHelpText>Description or notes for additional information.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>