force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__ErrorStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ErrorStatus__c</fullName>
    <description>Error Status for Custom Numbering or Tax Calculation.</description>
    <inlineHelpText>Error Status for Custom Numbering or Tax Calculation.</inlineHelpText>
    <label>Error Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax Calculation Error</fullName>
            </value>
            <value>
                <fullName>Custom Numbering Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>