force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__Key__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Key__c</fullName>
    <description>Key used for grouping line items in an invoice run result.</description>
    <inlineHelpText>Key used for grouping line items in an invoice run result.</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>