force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__LocationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LocationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account Location associated with the Credit Memo.</description>
    <inlineHelpText>Account Location corresponding to this Credit Memo.</inlineHelpText>
    <label>Location</label>
    <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>CreditMemos</relationshipName>
    <type>Lookup</type>
</CustomField>