force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__PaymentStatus__c</fullName>
    <description>Payment Status of the Credit Memo whether Uncredited, Credited or Partially Credited.</description>
    <inlineHelpText>Payment Status of the Credit Memo.</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Uncredited</fullName>
                <default>true</default>
                <label>Uncredited</label>
            </value>
            <value>
                <fullName>Credited</fullName>
            </value>
            <value>
                <fullName>Partially Credited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>