force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__ReasonCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ReasonCode__c</fullName>
    <description>Reason for creating the Credit Memo.</description>
    <inlineHelpText>Reason for creating the Credit Memo.</inlineHelpText>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Write Off from Invoice</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Billing Error</fullName>
            </value>
            <value>
                <fullName>Goodwill Service Credit</fullName>
            </value>
            <value>
                <fullName>Wallet Application</fullName>
            </value>
            <value>
                <fullName>Credit &amp; Rebill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>