force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__TotalCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalCreditAmount__c</fullName>
    <description>Total Credit Amount.</description>
    <inlineHelpText>Total Credit Amount.</inlineHelpText>
    <label>Total Credit Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>