force-app/main/default/objects/Apttus_Billing__CreditMemo__c/fields/Apttus_Billing__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__Type__c</fullName>
    <description>Credit Memo type</description>
    <inlineHelpText>The type of the credit memo.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABO Credit</fullName>
            </value>
            <value>
                <fullName>Manual Credit</fullName>
            </value>
            <value>
                <fullName>Wallet Credit</fullName>
            </value>
            <value>
                <fullName>Ad Hoc Credit</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>